src/test/deca/syntax/valid/while.deca
// Description:
//          Structure while correcte
//
// Résultat:
//Succès
//
{
    int n = 0;
    while (n < 2){
            n = n + 1;
    }
}