src/test/deca/syntax/invalid/while_inutile.deca
//  Description :
//            Structure while avec un while sans bloc d'instructions
//
// Résultat:
//missing '{' at '}'
//
{
    while (bool)
}